--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ lintian (2.5.69) UNRELEASED; urgency=medium
   * checks/fields.desc:
     + [CL] Downgrade severity of wrong-section-according-to-package-name
       from "W:" to "I:".  (Closes: #883772)
+    + [CL] Thanks to Niels Thykier, update the description of the
+      orphaned-package-not-maintained-in-debian-infrastructure tag.
   * checks/python.{pm,desc}:
     + [CL] Don't emit new-package-should-not-package-python2-module if
       the maintainer justifies its inclusion in the changelog entry.
