--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,10 @@ lintian (2.5.69) UNRELEASED; urgency=medium
   * checks/source-copyright.{desc,pm}:
     + [CL] Warn about insecure "Format:" URIs that reference debian.org.
       Based on a patch by Nicolas Braud-Santoni.  (Closes: #886930)
+  * checks/standards-version.pm:
+    + [CL] Include the date the Standards-Version was actually released in
+      the output of the ancient-standards-version and the
+      out-of-date-standards-version tags.
 
   * data/files/fnames:
     + [CL] Warn about packages that ship (eg.) test_foo.py files in the
