--- a/debian/changelog
+++ b/debian/changelog
@@ -5,11 +5,13 @@ lintian (2.5.69) UNRELEASED; urgency=medium
   * checks/cruft.pm:
     + [CL] Ignore TeX \section (etc.) titles when checking for GFDL
       license. Thanks, Norbert Preining for the report.  (Closes: #863384)
-  * checks/fields.desc:
+  * checks/fields.{pm,desc}:
     + [CL] Downgrade severity of wrong-section-according-to-package-name
       from "W:" to "I:".  (Closes: #883772)
     + [CL] Thanks to Niels Thykier, update the description of the
       orphaned-package-not-maintained-in-debian-infrastructure tag.
+    + [CL] Include the offending uri in the output of the
+      vcs-deprecated-in-debian-infrastructure tag.
   * checks/python.{pm,desc}:
     + [CL] Don't emit new-package-should-not-package-python2-module if
       the maintainer justifies its inclusion in the changelog entry.
