Refresh fonts data
Signed-off-by: Adam D. Barratt <adam@adam-barratt.org.uk>

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,8 @@ lintian (2.5.69) UNRELEASED; urgency=medium
   * data/files/fnames:
     + [CL] Warn about packages that ship (eg.) test_foo.py files in the
       global Python module namespace.
+  * data/files/fonts:
+    + [ADB] Refresh.
   * data/fields/name_section_mappings:
     + [CL] Ensure that NSS (Name Services Switch) modules are placed in the
       "admin" section. Thanks to Mathieu Parent (sathieu) for the patch.
