Emit an error if packages ship files in /etc/skel. Thanks to Paul Wise for the suggestion. (Closes: #887120)

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,8 @@ lintian (2.5.69) UNRELEASED; urgency=medium
   * data/files/fnames:
     + [CL] Warn about packages that ship (eg.) test_foo.py files in the
       global Python module namespace.
+    + [CL] Emit an error if packages ship files in /etc/skel. Thanks to
+      Paul Wise for the suggestion.  (Closes: #887120)
   * data/files/fonts:
     + [ADB] Refresh.
   * data/fields/name_section_mappings:
