--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.70) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 16 Jan 2018 12:08:07 +1100
+
 lintian (2.5.69) unstable; urgency=medium
 
   * Summary of tag changes:
