checks/python.pm: Fix false positives in python-package-missing-depends-on-python for Python 3 packages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ lintian (2.5.70) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/python.pm:
+    + [CL] Fix false positives in python-package-missing-depends-on-python
+      for Python 3 packages; we were not checking python3:any or
+      python3-minimal:any.
+
  -- Chris Lamb <lamby@debian.org>  Tue, 16 Jan 2018 12:08:07 +1100
 
 lintian (2.5.69) unstable; urgency=medium
