checks/files.pm: Ignore Rust .rs files in extra-license-file. (Closes: #887715)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ lintian (2.5.71) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/files.pm:
+    + [CL] Ignore Rust .rs files in extra-license-file.  (Closes: #887715)
+
   * lib/Lintian/Collect/Package.pm:
     + [CL] Fix "Use of uninitialized value in string ne" warnings that
       would have appeared as part of the src-orig-index handling in 2.5.66.
