t/tests/files-multiarch-foreign-files: Only run on amd64. (Closes: #886163)

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ lintian (2.5.71) UNRELEASED; urgency=medium
       would have appeared as part of the src-orig-index handling in 2.5.66.
       (Closes: #887428)
 
+  * t/tests/files-multiarch-foreign-files:
+    + [CL] Only run on amd64.  (Closes: #886163)
+
  -- Chris Lamb <lamby@debian.org>  Tue, 16 Jan 2018 18:03:37 +1100
 
 lintian (2.5.70) unstable; urgency=medium
