--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ lintian (2.5.71) UNRELEASED; urgency=medium
 
   * checks/files.pm:
     + [CL] Ignore Rust .rs files in extra-license-file.  (Closes: #887715)
+  * checks/python.pm:
+    + [CL] Don't emit "python-package-missing-depends-on-python" for debug
+      packages
 
   * data/rules/rules-should-not-use:
     + [CL] Add more context to xz-compression-level-too-high tag output.
