--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,10 @@ lintian (2.5.71) UNRELEASED; urgency=medium
 
   * checks/files.pm:
     + [CL] Ignore Rust .rs files in extra-license-file.  (Closes: #887715)
+  * checks/patch-systems.{desc,pm}:
+    + [CL] Check for patch files under the debian/patches that are not
+      mentioned in any series file. Thanks to Paul Wise for the idea.
+      (Closes: #887817)
   * checks/python.{desc,pm}:
     + [CL] Don't emit "python-package-missing-depends-on-python" for debug
       packages
