--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ lintian (2.5.72) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/debhelper.{desc,pm}:
+    + [CL] Warn about warn packages that use about dh_systemd_enable or
+      dh_systemd_start overrides whilst using debhelper compat level 11 as
+      they are no longer being called.  (Closes: #887899)
+
  -- Chris Lamb <lamby@debian.org>  Sun, 21 Jan 2018 16:42:25 +1100
 
 lintian (2.5.71) unstable; urgency=medium
