--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,7 @@ lintian (2.5.72) UNRELEASED; urgency=medium
   XXX: generate tag summary
 
   * checks/debhelper.{desc,pm}:
-    + [CL] Warn about warn packages that use about dh_systemd_enable or
+    + [CL] Warn about packages that use about dh_systemd_enable or
       dh_systemd_start overrides whilst using debhelper compat level 11 as
       they are no longer being called.  (Closes: #887899)
 
