--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ lintian (2.5.72) UNRELEASED; urgency=medium
   * checks/patch-systems.{desc,pm}:
     + [CL] Ignore files called "README" or "README.patches" when checking
       packages for patch-file-present-but-not-mentioned-in-series.
+    + [CL] Ignore commented-out patches in series files when checking the
+      patch-file-present-but-not-mentioned-in-series tag.
 
  -- Chris Lamb <lamby@debian.org>  Sun, 21 Jan 2018 16:42:25 +1100
 
