--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,10 @@ lintian (2.5.72) UNRELEASED; urgency=medium
     + [CL] Clarify that paragraph ordering matters in the description of
       the unused-file-paragraph-in-dep5-copyright tag.  (Closes: #762261)
 
+  * debian/copyright:
+    + [CL] Add missing initials for Gergely Nagy, Sylvestre Ledru and Steve
+      Langasek.  (Closes: #831729)
+
  -- Chris Lamb <lamby@debian.org>  Sun, 21 Jan 2018 16:42:25 +1100
 
 lintian (2.5.71) unstable; urgency=medium
