--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ lintian (2.5.72) UNRELEASED; urgency=medium
       they are no longer being called.  (Closes: #887899)
   * checks/fields.pm:
     + [CL] Also check xfonts-foo for font-package-not-multi-arch-foreign.
+  * checks/files.desc:
+    + [CL] Downgrade extra-license-file from "W" to "I".  (Closes: #740118)
   * checks/patch-systems.{desc,pm}:
     + [CL] Ignore files called "README" or "README.patches" when checking
       packages for patch-file-present-but-not-mentioned-in-series.
