--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ lintian (2.5.72) UNRELEASED; urgency=medium
     + [CL] Avoid a false positive for spelling-error-in-binary that was
       causing a FTBFS on armhf.  (Closes: #888074)
     + [CL] Drop a duplicate line in spelling-error-in-binary exceptions.
+    + [CL] Move spelling-error-in-binary exceptions to a data file.
   * checks/cruft.{desc,pm}:
     + [CL] Do not emit "license-problem-php-license" when the source comes
       from pecl.php.net: "The last agreement with FTP Masters was that PHP
