--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
-lintian (2.5.72) UNRELEASED; urgency=medium
+lintian (2.5.72) unstable; urgency=medium
 
-  XXX: generate tag summary
+  * Summary of tag changes:
+    + Added:
+      - debian-rules-uses-deprecated-systemd-override
+      - debian-watch-does-not-check-gpg-signature
+    + Removed:
+      - debian-watch-may-check-gpg-signature
 
   * checks/binaries.pm:
     + [CL] Avoid a false positive for spelling-error-in-binary that was
@@ -54,6 +59,8 @@ lintian (2.5.72) UNRELEASED; urgency=medium
     + [CL] Ensure xfonts-foo are recognised as part of the "x11" section to
       match the definition on https://packages.debian.org/en/sid/.
       (Closes: #878609)
+  * data/spelling/corrections:
+    + [PW] Add a number of corrections.
 
   * debian/control:
     + [CL] docbook-xml is required to build the documentation, so drop
@@ -67,7 +74,7 @@ lintian (2.5.72) UNRELEASED; urgency=medium
       (etc.) tags where the repetition is part of an acronym expansion such
       as "ORA (ORA Recursive Acronym)".  (Closes: #883719)
 
- -- Chris Lamb <lamby@debian.org>  Sun, 21 Jan 2018 16:42:25 +1100
+ -- Chris Lamb <lamby@debian.org>  Fri, 26 Jan 2018 05:17:01 +0000
 
 lintian (2.5.71) unstable; urgency=medium
 
