--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.73) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 26 Jan 2018 16:33:51 +1100
+
 lintian (2.5.72) unstable; urgency=medium
 
   * Summary of tag changes:
