--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ lintian (2.5.73) UNRELEASED; urgency=medium
     + [CL] Warn about packages that specify a Files-Excluded header without
       a valid Format header as the former will be ignored by uscan(1).
       Thanks to Gunnar Wolf for the initial patch.  (Closes: #745743)
+    + [CL] Warn when a "Files: *" DEP-5 paragraph exists but it is not the
+      first paragraph. Thank to Christoph Biedl for the report and idea.
+      (Closes: #879235)
   * checks/cruft.pm:
     + [CL] When looking for the source of "build/foo/bar.min.js", also
       check "src/foo/bar.js".  (Closes: #832027)
