Emit a pedantic warning for packages that are using the dpatch patch system. (Closes: #884500)

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ lintian (2.5.73) UNRELEASED; urgency=medium
   * checks/fields.{desc,pm}:
     + [CL] Add a pedantic warning for co-maintained packages that are not
       managed in a revision control system.  (Closes: #884497)
+  * checks/patch-systems.{desc,pm}:
+    + [CL] Emit a pedantic warning for packages that are using the dpatch
+      patch system.  (Closes: #884500)
   * checks/source-copyright.{desc,pm}:
     + [CL] Warn about packages that specify a Files-Excluded header without
       a valid Format header as the former will be ignored by uscan(1).
