--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ lintian (2.5.73) UNRELEASED; urgency=medium
   * checks/fields.{desc,pm}:
     + [CL] Add a pedantic warning for co-maintained packages that are not
       managed in a revision control system.  (Closes: #884497)
+    + [CL] Warn about Multi-Arch: same packages that ship
+      architecture-specific Lintian overrides. Thanks to Sebastian
+      Ramacher for the report.  (Closes: #787469)
   * checks/patch-systems.{desc,pm}:
     + [CL] Emit a pedantic warning for packages that are using the dpatch
       patch system.  (Closes: #884500)
