--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ lintian (2.5.73) UNRELEASED; urgency=medium
     + [CL] Improve the description-synopsis-might-not-be-phrased-properly
       tag also detect multiple sentences and improve the tag description.
       (Closes: #778427)
+  * checks/changes-file.{desc.pm}:
+    + [CL] Check for source format 1.0 files that ship upstream signatures
+      as this is not supported in stretch.  (Closes: #823190)
   * checks/fields.{desc,pm}:
     + [CL] Add a pedantic warning for co-maintained packages that are not
       managed in a revision control system.  (Closes: #884497)
