--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,10 @@ lintian (2.5.73) UNRELEASED; urgency=medium
   * checks/changes-file.{desc.pm}:
     + [CL] Check for source format 1.0 files that ship upstream signatures
       as this is not supported in stretch.  (Closes: #823190)
+    + [CL] Fix an issue where the bad-section-in-changes-file,
+      file-size-mismatch-in-changes-file and
+      checksum-mismatch-in-changes-file tags were not being checked if a
+      package contained an upstream signature.
   * checks/fields.{desc,pm}:
     + [CL] Add a pedantic warning for co-maintained packages that are not
       managed in a revision control system.  (Closes: #884497)
