--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,9 @@ lintian (2.5.73) UNRELEASED; urgency=medium
       first paragraph. Thank to Christoph Biedl for the report and idea.
       (Closes: #879235)
 
+  * data/common/dh_addons:
+    + [CL] Move/create from data/debhelper/dh_addons as we plan to use
+      it elsewhere.
   * data/files/python-generic-modules:
     + [CL] Detect "backports" (and "backport") as overly generic Python
       module names.  (Closes: #888559)
