--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ lintian (2.5.74) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/cruft.{desc}:
+    + [BR] Check for wasm file. (Closes: #889102)
+
  -- Chris Lamb <lamby@debian.org>  Sat, 03 Feb 2018 10:51:52 +0000
 
 lintian (2.5.73) unstable; urgency=medium
