data/files/fnames: Ensure package-contains-python-doctree-file also warns about compressed .doctree files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -73,6 +73,9 @@ lintian (2.5.73) UNRELEASED; urgency=medium
   * data/debhelper/dh_commands-manual:
     + [NT] Remove dh_systemd* entries.  Debian stable have a recent
       enough version of debhelper that this entry no longer matters.
+  * data/files/fnames:
+    + [CL] Ensure package-contains-python-doctree-file also warns about
+      compressed .doctree files.
   * data/files/js-libraries:
     + [CL] Avoid false-positives when detecting Twitter's bootstrap
       library.  (Closes: #888972)
