--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,9 @@ lintian (2.5.73) UNRELEASED; urgency=medium
       package contained an upstream signature.
     + [CL] Check for inconsistencies between "Files" and Checksums-*
       sections in .changes files.  (Closes: #658542)
+  * checks/cruft.{desc.pm}:
+    + [CL] Add pedantic warning for packages using source.lintian-overrides
+      instead of debian/source/lintian-overrides.
   * checks/fields.{desc,pm}:
     + [CL] Add a pedantic warning for co-maintained packages that are not
       managed in a revision control system.  (Closes: #884497)
