--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.74) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 03 Feb 2018 10:51:52 +0000
+
 lintian (2.5.73) unstable; urgency=medium
 
   * Summary of tag changes:
